--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,20 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MainFragment">
+    tools:context=".ui.home.HomeFragment">
 
-
-    <Button
-        android:id="@+id/buttonSignOut"
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
+        android:id="@+id/userMail"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sing out"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_gravity="top|start"
+        android:text=""
+        android:textSize="40sp"
+        />
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/buttonSignOut"
+        android:layout_width="wrap_content"
+        android:padding="10dp"
+        android:textSize="30sp"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:background="@drawable/regular_button"
+        android:textColor="@color/white"
+        android:layout_height="wrap_content"
+        android:text="Sign Out" />
+
+</FrameLayout>
